<resources>
    <string name="meet_now_title">Meet now</string>
    <string name="book">Book</string>
    <!-- Available now-->
    <string name="available_for">Available for %s</string>
    <string name="pointing_finger_emoji">👉</string>
    <string name="no_available_rooms_title">There are no available rooms for now</string>
    <string name="busy_time_subtitle">Wow, it’s a busy time now. But keep calm, you should check rooms which will be available soon</string>
    <!-- Available soon-->
    <string name="available_in">Available in %s</string>
    <string name="available_in_for">Available in %s for %s</string>
    <string name="eyes_open_emoji">👀</string>
    <string name="you_don_t_need_to_wait_title">You don’t need to wait</string>
    <string name="check_the_rooms_subtitle">Check the rooms that are available right now</string>
    <string name="all_rooms_are_occupied_title">All rooms are occupied for the next \n30 min</string>
    <string name="select_a_room_subtitle">Select a room, \nwhich will be available later</string>
    <string name="free_at">Free at&#160;</string>
    <string name="until">&#160;until&#160;</string>
    <!-- Fast booking -->
    <string name="select_time_range">Select time range</string>
    <string name="for_meetings_longer_than_1_5_hours_use">For meetings longer than 1,5 hours use</string>
    <string name="rooms">Rooms</string>
    <string name="incorrect_start_time_message">You can’t start event later than in 30 minutes from now.</string>
    <string name="incorrect_min_time_message">The event can’t last less than 15 minutes.</string>
    <string name="incorrect_max_time_message">The event can’t last longer than 1,5 hours.</string>
    <string name="room_booked_successfully">%s has been booked\nSuccessfully!</string>

    <string-array name="tab_titles">
        <item>
            Available now
        </item>
        <item>
            Available soon
        </item>
    </string-array>
</resources>