<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    android:paddingTop="@dimen/dimens_40_dp"
    android:paddingBottom="@dimen/dimens_30_dp">

        <TextView
            android:id="@+id/no_rooms_available_soon_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes_open_emoji"
            android:textSize="@dimen/dimens_40_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_rooms_available_soon_title"
            style="@style/TextAppearanceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_24_dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dimens_5_sp"
            android:text="@string/all_rooms_are_occupied_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_rooms_available_soon_emoji" />

        <TextView
            android:id="@+id/no_rooms_available_soon_subtitle"
            style="@style/TextAppearanceDescriptionDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_8_dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dimens_5_sp"
            android:text="@string/select_a_room_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_rooms_available_soon_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

